kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app-devops
  labels:
    app: go-web-app-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app-devops
  template:
    metadata:
      labels:
        app: go-web-app-devops
    spec:
      containers:
        - name: go-web-app-devops
          image: harikiranhk/go-web-app-devops:v1
          ports:
           - containerPort: 8081
