kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-devops-service
  labels:
    app: go-web-app-devops
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: go-web-app-devops
    type: ClusterIP
